use correct semantics and ensure color contrast

--- a/src/components/global/BestPracticeFigure/best-practice-figure.css
+++ b/src/components/global/BestPracticeFigure/best-practice-figure.css
@@ -1,15 +1,20 @@
 .best-practice__do_dont {
-  display: flex;
-  justify-content: space-between;
-  align-items: start;
+  display: grid;
+
+  grid-template-columns: 1fr 1fr;
 
   gap: 12px;
 }
 
-.best-practice__do,
-.best-practice__dont,
-.best-practice__caution {
-  flex-grow: 1;
+/* Collapse to 1 column per row on smaller viewports */
+@media (max-width: 996px) {
+  .best-practice__do_dont {
+    grid-template-columns: 1fr;
+  }
+}
+
+.best-practice__container figcaption {
+  text-align: start;
 }
 
 .best-practice__do p,
@@ -19,7 +24,7 @@
 }
 
 .best-practice__image-wrapper {
-  border-radius: 8px;
+  border-radius: 8px 8px 0px 0px;
 
   overflow: hidden;
 }
@@ -30,6 +35,8 @@
   padding: 12px 16px;
 
   font-weight: 600;
+
+  border-radius: 0px 0px 8px 8px;
 }
 
 .best-practice__do .best-practice__image-wrapper {
@@ -54,6 +61,10 @@
 }
 
 .best-practice__caution-text {
-  color: var(--c-yellow-100);
+  /* --c-yellow-100 does not have enough contrast
+   * placed on top of --c-yellow-10, so we manually
+   * choose a darker text color here.
+   */
+  color: #7e5e17;
   background: var(--c-yellow-10);
 }
